--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,8 @@
     "comma-dangle": "off",
     "object-curly-spacing": "off",
     "require-jsdoc": "off",
-    "arrow-parens": "off"
+    "arrow-parens": "off",
+    "operator-linebreak": "off"
   },
   "extends": "google"
 }
