--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,8 @@
     "object-curly-spacing": "off",
     "require-jsdoc": "off",
     "arrow-parens": "off",
-    "operator-linebreak": "off"
+    "operator-linebreak": "off",
+    "linebreak-style": 0
   },
   "extends": "google"
 }
