--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint": "^7.7.0",
     "eslint-config-google": "^0.14.0",
     "eslint-loader": "^4.0.2",
+    "file-loader": "^6.1.0",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.10.0",
     "sass": "^1.26.10",
@@ -48,6 +49,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.10.4",
+    "bootstrap": "^4.5.2",
     "normalize.css": "^8.0.1"
   }
 }
