--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
     "require-jsdoc": "off",
     "arrow-parens": "off",
     "operator-linebreak": "off",
+    "no-invalid-this": "off",
     "linebreak-style": 0
   },
   "extends": "google"
